@@ -1,3 +1,15 @@
+2011-01-14  David Levin  <levin@chromium.org>
+
+        Reviewed by Shinichiro Hamaji.
+
+        check-webkit-style: _FunctionState should detect pure functions.
+        https://bugs.webkit.org/show_bug.cgi?id=52428
+
+        * Scripts/webkitpy/style/checkers/cpp.py: Added detection for if a function declaration
+        is a pure virtual function.
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Added tests for verifying that pure
+        virtual functions are correctly detected.
+
 2011-01-13  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Reviewed by Yury Semikhatsky.
